Refactoring: admin management